// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupedRepost - Snapshots > matches snapshot when current user reposted 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        You, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        You and 1 other reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    >
      <button
        aria-label="Undo repost"
        class="h-auto px-0 text-destructive hover:bg-transparent hover:text-destructive"
        data-testid="grouped-repost-undo-button"
        variant="ghost"
      >
        Undo repost
      </button>
    </div>
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot when originalPostId is null 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        First Reposter, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        First Reposter and 1 other reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
        <div
          data-index="1"
          data-reposter-id="user3"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user3
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    />
  </div>
  <div
    data-class-name="p-4 text-sm text-muted-foreground"
    data-override-defaults="true"
    data-testid="grouped-repost-error"
  >
    Unable to load original post
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot with avatar overflow 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        First Reposter, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        First Reposter and 5 others reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
        <div
          data-index="1"
          data-reposter-id="user3"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user3
        </div>
        <div
          data-index="2"
          data-reposter-id="user4"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user4
        </div>
        <div
          data-index="3"
          data-reposter-id="user5"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user5
        </div>
        <div
          data-index="4"
          data-reposter-id="user6"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user6
        </div>
        <div
          data-class-name="flex shrink-0 items-center justify-center rounded-full bg-background shadow-sm size-8 text-sm font-medium text-foreground -ml-2"
          data-override-defaults="true"
          data-testid="container"
        >
          +
          1
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    />
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot with basic grouped repost 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        First Reposter, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        First Reposter and 1 other reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
        <div
          data-index="1"
          data-reposter-id="user3"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user3
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    />
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot with deleting state 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        You, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        You and 1 other reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    >
      <button
        aria-label="Undoing repost..."
        class="h-auto px-0 text-destructive hover:bg-transparent hover:text-destructive"
        data-testid="grouped-repost-undo-button"
        disabled=""
        variant="ghost"
      >
        Undoing...
      </button>
    </div>
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot with single reposter 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        First Reposter reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        First Reposter reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    />
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;

exports[`GroupedRepost - Snapshots > matches snapshot without user name (fallback to ID) 1`] = `
<div
  data-class-name="gap-0 rounded-md p-0"
  data-testid="grouped-repost"
>
  <div
    data-class-name="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
    data-override-defaults="true"
    data-testid="grouped-repost-header"
  >
    <div
      data-class-name="flex items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <svg
        aria-label="Repeat"
        class="size-5"
        data-testid="repeat-icon"
      >
        <title>
          Repeat
        </title>
      </svg>
      <span
        class="text-base font-bold text-foreground md:hidden"
        data-as="span"
        data-testid="typography"
      >
        user2, others reposted
      </span>
      <span
        class="hidden text-base font-bold text-foreground md:inline"
        data-as="span"
        data-testid="typography"
      >
        user2 and 1 other reposted this
      </span>
      <div
        data-class-name="hidden items-center pl-0 md:flex"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-index="0"
          data-reposter-id="user2"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user2
        </div>
        <div
          data-index="1"
          data-reposter-id="user3"
          data-testid="reposter-avatar"
        >
          ReposterAvatar 
          user3
        </div>
      </div>
    </div>
    <div
      data-class-name="flex items-center gap-1"
      data-override-defaults="true"
      data-testid="container"
    />
  </div>
  <div
    data-post-id="user1:post-123"
    data-testid="grouped-repost-preview"
  >
    PostPreviewCard 
    user1:post-123
  </div>
</div>
`;
